--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/ERP
-spring.datasource.username=website
-spring.datasource.password=mCVHM8xBB@bV2yrx
+spring.datasource.url=${URL}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
@@ -14,5 +14,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
 
-spring.security.oauth2.client.registration.google.client-id=  506589657271-vh2p2g3ivu4251dcu897o8mtllh20agr.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=  ${CLIENT_ID_GOOGLE}
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET_GOOGLE}
