Remplissage et création des différentes classes

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 
 spring.security.oauth2.client.registration.google.client-id=  ${CLIENT_ID_GOOGLE}
 spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET_GOOGLE}
+
+spring.application.name=TodoList
