--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
@@ -18,3 +19,5 @@ spring.security.oauth2.client.registration.google.client-id=  ${CLIENT_ID_GOOGLE
 spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET_GOOGLE}
 
 spring.application.name=TodoList
+server.error.include-message=always
+
