--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,9 +8,9 @@
 		<!--  lookup parent from repository  -->
 	</parent>
 	<groupId>fr.gorisse.todoApp</groupId>
-	<artifactId>TodoListApp</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>TodoListApp</name>
+	<artifactId>TodoList</artifactId>
+	<version>0.1</version>
+	<name>TodoList</name>
 	<description>Todo List App</description>
 	<properties>
 		<java.version>17</java.version>
