--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,8 +7,17 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.mail.host=email-smtp.eu-west-3.amazonaws.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
 
 
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=25
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
