Ajout des commentaires dans les services

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.mail.host=email-smtp.eu-west-3.amazonaws.com
+spring.mail.host=nosrespond@gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=TodoAPP
+spring.mail.password=wpve dbig zndw xrwf
 
 
 spring.mail.properties.mail.transport.protocol=smtp
