--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 
+
+
 spring.datasource.url=${URL}
-spring.datasource.username=${USERNAME}
+spring.datasource.username=${db.username}
 spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
@@ -30,3 +32,4 @@ spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET_
 spring.application.name=TodoList
 server.error.include-message=always
 
+spring.profiles.active=dev
