--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -14,6 +14,7 @@
 	<description>Todo List App</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring.active.profile>dev</spring.active.profile>
 	</properties>
 	<dependencies>
 		<dependency>
